--- a/src/pages/student_report/student_report.scss
+++ b/src/pages/student_report/student_report.scss
@@ -1,4 +1,26 @@
 page-studuent-report {
-    
+    .student_info{
+        border:1px solid #ddd;
+        padding:10px;
+        border-radius:5px;
+        
     }
+    .student_class {
+        float:right;
+        color:#ddd
+    }
+    .arrival_time{
+        float:right;
+        color:#333
+    }
+    .parents_form{
+        color:blue
+    }
+    .parents_info{
+        float:right;color:#333
+    }
+    .QRcode{
+        text-align: center;
+    }
+}
     
