--- a/src/pages/students/students.scss
+++ b/src/pages/students/students.scss
@@ -1,17 +1,25 @@
 page-students {
- .student_card{
-    border:1px solid #ddd;padding:10px;border-radius:5px;
- }
- .student_class{
-    float:right;color:#ddd
- }
- .arrival_time{
-    float:right;color:#333
- }
- .parents_form{
-     color:blue;
- }
- .parents_info{
-    float:right;color:#333
- }
+    .student_card{
+        border:1px solid #ddd;padding:10px;border-radius:5px;
+    }
+    .student_class{
+        float:right;color:#ddd
+    }
+    .arrival_time{
+        float:right;color:#333
+    }
+    .parents_form{
+        color:blue;
+    }
+    .parents_info{
+        float:right;color:#333
+    }
+    .btn-red{
+        width:100%;
+        border-radius:5px;
+        background:red;
+        color:#fff;
+        padding:10px;
+        font-size:20px
+    }
 }
