--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -30,6 +30,14 @@
     padding:10px;
     font-size:20px
 }
+.btn-grey {
+    width: 100%;
+    border-radius: 5px;
+    background: grey;
+    color: #fff;
+    padding: 10px;
+    font-size: 20px;
+}
 .alert{
     padding:15px;
     margin-bottom:20px;
